force-app/main/default/objects/Product_Catalogue__c/Product_Catalogue__c.object-meta.xml
<CustomObject>
    <label>Material</label>
    <nameField>
        <label>Material Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>