force-app/main/default/objects/Product_Catalogue__c/fields/BEHG_Value_100l__c.field-meta.xml
<CustomField>
    <fullName>BEHG_Value_100l__c</fullName>
    <label>CO2 Value €/100l</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>