force-app/main/default/objects/Product_Catalogue__c/fields/Commodity_Grade_L2__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Grade_L2__c</fullName>
    <label>Grade(L2)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Additive</fullName>
                <isActive>false</isActive>
                <label>Additive</label>
            </value>
            <value>
                <fullName>AGO B0</fullName>
            </value>
            <value>
                <fullName>AGO B0 CH</fullName>
            </value>
            <value>
                <fullName>AGO B7</fullName>
            </value>
            <value>
                <fullName>AGO B7 CH</fullName>
                <isActive>false</isActive>
                <label>AGO B7 CH</label>
            </value>
            <value>
                <fullName>AGO VPD</fullName>
            </value>
            <value>
                <fullName>Alkalyte</fullName>
                <isActive>false</isActive>
                <label>Alkalyte</label>
            </value>
            <value>
                <fullName>AVGAS</fullName>
                <isActive>false</isActive>
                <label>AVGAS</label>
            </value>
            <value>
                <fullName>Cokerfeed</fullName>
                <isActive>false</isActive>
                <label>Cokerfeed</label>
            </value>
            <value>
                <fullName>EBV- Crude-Mix</fullName>
                <isActive>false</isActive>
                <label>EBV- Crude-Mix</label>
            </value>
            <value>
                <fullName>ETHANOL</fullName>
                <isActive>false</isActive>
                <label>ETHANOL</label>
            </value>
            <value>
                <fullName>FAME</fullName>
                <isActive>false</isActive>
                <label>FAME</label>
            </value>
            <value>
                <fullName>FO</fullName>
                <isActive>false</isActive>
                <label>FO</label>
            </value>
            <value>
                <fullName>GTL B0</fullName>
            </value>
            <value>
                <fullName>GTL B7</fullName>
            </value>
            <value>
                <fullName>High Sulphur Gasoil</fullName>
                <isActive>false</isActive>
                <label>High Sulphur Gasoil</label>
            </value>
            <value>
                <fullName>IGO 1000ppm</fullName>
            </value>
            <value>
                <fullName>IGO 10ppm</fullName>
            </value>
            <value>
                <fullName>IGO 50ppm</fullName>
            </value>
            <value>
                <fullName>Jet A1</fullName>
                <isActive>false</isActive>
                <label>Jet A1</label>
            </value>
            <value>
                <fullName>Kerosene</fullName>
                <isActive>false</isActive>
                <label>Kerosene</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>ULG100 VP</fullName>
            </value>
            <value>
                <fullName>ULG95_BOB_E10</fullName>
            </value>
            <value>
                <fullName>ULG95_BOB_E5</fullName>
            </value>
            <value>
                <fullName>ULG95 E0</fullName>
            </value>
            <value>
                <fullName>ULG95 E10</fullName>
            </value>
            <value>
                <fullName>ULG95 E5</fullName>
            </value>
            <value>
                <fullName>ULG98</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>