force-app/main/default/objects/Product_Catalogue__c/fields/CSO__c.field-meta.xml
<CustomField>
    <fullName>CSO__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CSO</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>