force-app/main/default/objects/Product_Catalogue__c/fields/Current_BEHG_valid_from_date__c.field-meta.xml
<CustomField>
    <fullName>Current_BEHG_valid_from_date__c</fullName>
    <label>Current CO2 valid from date</label>
    <type>Date</type>
</CustomField>