force-app/main/default/objects/Product_Catalogue__c/fields/Dyeing_cost_EUR_100l__c.field-meta.xml
<CustomField>
    <fullName>Dyeing_cost_EUR_100l__c</fullName>
    <label>Dyeing cost [EUR/100l]</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>