force-app/main/default/objects/Product_Catalogue__c/fields/Future_BEHG_valid_from_date__c.field-meta.xml
<CustomField>
    <fullName>Future_BEHG_valid_from_date__c</fullName>
    <label>Future CO2 valid from date</label>
    <type>Date</type>
</CustomField>