force-app/main/default/objects/Product_Catalogue__c/fields/Future_BEHG_value_in_100l__c.field-meta.xml
<CustomField>
    <fullName>Future_BEHG_value_in_100l__c</fullName>
    <label>Future CO2 value (in €/100l)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>