force-app/main/default/objects/Product_Catalogue__c/fields/Level_0__c.field-meta.xml
<CustomField>
    <fullName>Level_0__c</fullName>
    <label>Product Group(L0)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gasoil</fullName>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Gasolin</fullName>
                <isActive>false</isActive>
                <label>Gasolin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>