force-app/main/default/objects/Product_Catalogue__c/fields/Level_1__c.field-meta.xml
<CustomField>
    <fullName>Level_1__c</fullName>
    <label>Product sub group(L1)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>IGO</fullName>
            </value>
            <value>
                <fullName>MOGAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>