force-app/main/default/objects/Product_Catalogue__c/fields/Level_2__c.field-meta.xml
<CustomField>
    <fullName>Level_2__c</fullName>
    <label>Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Level_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGO B0</fullName>
            </value>
            <value>
                <fullName>AGO B7</fullName>
            </value>
            <value>
                <fullName>IGO 50ppm</fullName>
            </value>
            <value>
                <fullName>IGO 1000ppm</fullName>
            </value>
            <value>
                <fullName>ULG95E5</fullName>
            </value>
            <value>
                <fullName>ULG95E10</fullName>
            </value>
            <value>
                <fullName>ULG98</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>