force-app/main/default/objects/Product_Catalogue__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Product_Catalogues_del</relationshipName>
    <type>Lookup</type>
</CustomField>