force-app/main/default/objects/Product_Catalogue__c/fields/Marketing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Marketing cost [EUR/100l]</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>