force-app/main/default/objects/Product_Catalogue__c/fields/Material_L3__c.field-meta.xml
<CustomField>
    <fullName>Material_L3__c</fullName>
    <label>Material(L3)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>