force-app/main/default/objects/Product_Catalogue__c/fields/Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Material_Name__c</fullName>
    <label>Material Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>