force-app/main/default/objects/Product_Catalogue__c/fields/Online_Material_Name_Taxed__c.field-meta.xml
<CustomField>
    <fullName>Online_Material_Name_Taxed__c</fullName>
    <label>Online Material Name [Taxed]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>