force-app/main/default/objects/Product_Catalogue__c/fields/Online_Material_Name_UnTaxed__c.field-meta.xml
<CustomField>
    <fullName>Online_Material_Name_UnTaxed__c</fullName>
    <label>Online Material Name [UnTaxed]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>