force-app/main/default/objects/Product_Catalogue__c/fields/Total_Additive_cost_EUR_100l__c.field-meta.xml
<CustomField>
    <fullName>Total_Additive_cost_EUR_100l__c</fullName>
    <formula>Additive_cost_EUR_100l__c + Dyeing_cost_EUR_100l__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Additive cost [EUR/100l]</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>